updated fields with in modal

--- a/public/admin/stylesheets/custom.css
+++ b/public/admin/stylesheets/custom.css
@@ -2,6 +2,10 @@ input, textarea {
     width: 50%;
 }
 
+.modal-body input, .modal-body textarea {
+    width:95%;
+}
+
 select {
     width:auto;
 }
