--- a/admin/views/base/index.haml
+++ b/admin/views/base/index.haml
@@ -1,5 +1,5 @@
 .base-text.text-center
-  %p Welcome to AboveGEM Event Management System Admin
+  %p Welcome to Event Management System Admin
 
 -#.base-icons
 -#  .btn-group
